fix vertical alignment of content on landing page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -27,7 +29,7 @@ nav {
 }
 
 .paragraph-wrapper {
-    min-height: 55%;
+    flex-grow: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,7 +62,6 @@ footer {
     flex-direction: column;
     align-items: center;
     top: 100vh;
-    margin-top: 30px;
     padding-top: 20px;
     color: white;
 }
